Add phpunit dev dependency and test script
Instead of requiring a globally installed phpunit to run the tests.

--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,11 @@
     },
     "require": {
         "wikibase/data-model": "^7.3"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.4"
+    },
+    "scripts": {
+        "test": "phpunit"
     }
 }
